k8s/stage/logging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki-stage
  template:
    metadata:
      labels:
        app: loki-stage
    spec:
      containers:
        - name: loki
          image: grafana/loki:2.9.2
          ports:
            - containerPort: 3100
          securityContext:
            runAsUser: 0
            privileged: true
          volumeMounts:
            - name: loki-data
              mountPath: /loki  # Loki의 실제 데이터 저장 경로
      volumes:
        - name: loki-data
          hostPath:
            path: /kind/data/loki
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: loki-stage
spec:
  ports:
    - port: 3100
      targetPort: 3100
  selector:
    app: loki-stage
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail-stage
spec:
  selector:
    matchLabels:
      app: promtail-stage
  template:
    metadata:
      labels:
        app: promtail-stage
    spec:
      serviceAccountName: promtail-serviceaccount
      terminationGracePeriodSeconds: 30
      containers:
        - name: promtail
          image: grafana/promtail:2.9.2
          args:
            - -config.file=/etc/promtail/promtail.yaml
          securityContext:
            runAsUser: 0
            privileged: true
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
            - name: pods
              mountPath: /var/log/pods
              readOnly: true
            - name: docker
              mountPath: /var/lib/docker/containers
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: promtail-config
        - name: pods
          hostPath:
            path: /var/log/pods
        - name: docker
          hostPath:
            path: /var/lib/docker/containers
