k8s/stage/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-stage
  template:
    metadata:
      labels:
        app: mysql-stage
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysqldata
              mountPath: /var/lib/mysql
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
      volumes:
        - name: mysqldata
          persistentVolumeClaim:
            claimName: mysql-stage-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-stage
spec:
  selector:
    app: mysql-stage
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
