k8s/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/grafana"
        backend:
          service:
            name: grafana-stage
            port:
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: springboot-app-stage
            port:
              number: 8080
